# axum-shuttle-postgres-authentication-demo

./: Cargo.toml  Shuttle.toml  buildspec.yml  log.toml  schema.sql
migrations/: 20230101133159_dcare.sql
src/: authentication.rs  dcare_order.rs  dcare_user.rs  department.rs  errors.rs  gsheets.rs  lib.rs  main.rs  utils.rs
