[package]
name = "dcare-rest-service"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["web-axum"] }
axum = "0.6.1"
sync_wrapper = "0.1.1"
http = "0.2.8"
http-body = "0.4.5"
once_cell = "1.16.0"
pbkdf2 = "0.11.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "bit-vec"] }
tera = { version = "1.17.1", default-features = false }
shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
cookie = "0.16.2"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
bit-vec = { version = "0.6.3", features = ["serde"] }
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
