[package]
name = "dcare-rest-service"
version = "0.2.1"
edition = "2021"
publish = false

[lib]

[[bin]]
name = "dcare-rest-service"
path = "src/main.rs"

[features]
default = ["shuttle"]
shuttle = ["dep:shuttle-service", "dep:shuttle-shared-db"]
main = ["dep:tokio", "dep:tracing-subscriber", "dep:clap"]

[dependencies]
shuttle-service = { version = "0.9.0", features = ["web-axum"], optional = true }
shuttle-shared-db = { version = "0.9.0", features = ["postgres"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
clap = { version = "3.1.18", features = ["derive"], optional = true }
axum = "0.6.1"
sync_wrapper = "0.1.1"
http = "0.2.8"
http-body = "0.4.5"
once_cell = "1.16.0"
pbkdf2 = "0.11.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "bit-vec"] }
tera = { version = "1.17.1", default-features = false }
cookie = "0.16.2"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
bit-vec = { version = "0.6.3", features = ["serde"] }
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
tracing = "0.1.37"
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
utoipa = { version = "2.4.2", features = ["axum_extras", "serde_json", "json", "chrono"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
