[package]
name = "dcare-rest-service"
version = "0.2.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.11.0", features = ["web-axum"] }
shuttle-shared-db = { version = "0.11.0", features = ["postgres"] }
axum = "0.6.1"
sync_wrapper = "0.1.1"
http = "0.2.8"
http-body = "0.4.5"
once_cell = "1.16.0"
pbkdf2 = "0.11.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "chrono", "bit-vec"] }
tera = { version = "1.17.1", default-features = false }
cookie = "0.16.2"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
bit-vec = { version = "0.6.3", features = ["serde"] }
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
tracing = "0.1.37"
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }
utoipa = { version = "2.4.2", features = ["axum_extras", "serde_json", "json", "chrono"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
google-sheets4 = "4.0.1"
hyper = "0.14.24"
hyper-rustls = "0.23.2"
thiserror = "1.0.38"
regex = "1.7.1"
lazy_static = "1.4.0"
shuttle-secrets = "0.11.0"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
#tokio = { version = "1", features = ["full"] }
